--- a/html_advanced/styleguide.html
+++ b/html_advanced/styleguide.html
@@ -97,8 +97,10 @@
                     </address>
                 </div>
                 <div>
-                    <pre><code>&lt;h2&gt;My title&lt;/h2&gt;
-&lt;p&gt;Proin lacus turpis, feugiat sit amet sollicitudin non, volutpat in libero. Aenean hendrerit ultrices nulla ac lobortis. Vestibulum consectetur nibh vel ante rhoncus faucibus.&lt;/p&gt;</code></pre>
+                    <pre>
+<code>&lt;h2&gt;My title&lt;/h2&gt;
+&lt;p&gt;Proin lacus turpis, feugiat sit amet sollicitudin non, volutpat in libero. Aenean hendrerit ultrices nulla ac lobortis. Vestibulum consectetur nibh vel ante rhoncus faucibus.&lt;/p&gt;</code>
+                    </pre>
                 </div>
                 <div>
                     <p>Curabitur sit amet turpis cursus massa mollis <mark>highlighted</mark>. Duis finibus leo massa, eget dapibus erat finibus sed. Aenean condimentum sapien magna, eleifend <mark>highlighted</mark> mi consequat ut. Cras nec quam sed sapien ultricies <mark>highlighted</mark> ut sed metus.</p>
@@ -110,6 +112,7 @@
                     <h2>Table</h2>
                 </header>
                 <table>
+                    <caption>Star Wars Trilogy Data</caption>
                     <thead>
                         <tr>
                             <th scope="col">Title</th>
@@ -121,17 +124,17 @@
                         <tr>
                             <th scope="row">Star Wars: Episode IV - A New Hope</th>
                             <td>George Lucas</td>
-                            <td>May 25, 1977</td>
+                            <td>May 25th, 1977</td>
                         </tr>
                         <tr>
                             <th scope="row">Star Wars: Episode V - The Empire Strikes Back</th>
                             <td>Irvin Kershner</td>
-                            <td>May 21, 1980</td>
+                            <td>May 21st, 1980</td>
                         </tr>
                         <tr>
                             <th scope="row">Star Wars: Episode VI - Return of the Jedi</th>
                             <td>Richard Marquand</td>
-                            <td>May 25, 1983</td>
+                            <td>May 25th, 1983</td>
                         </tr>
                     </tbody>
                 </table>
@@ -161,20 +164,14 @@
                 <header>
                     <h2>Video</h2>
                 </header>
-                <video controls loop poster="https://intranet-projects-files.s3.amazonaws.com/webstack/thumbnail.jpg">
-                    <source src="https://intranet-projects-files.s3.amazonaws.com/webstack/BigBuckBunny.mp4" type="video/mp4">
-                    Sorry, your browser doesn't support HTML5 video.
-                </video>
+                <video src="https://intranet-projects-files.s3.amazonaws.com/webstack/BigBuckBunny.mp4" controls loop poster="https://intranet-projects-files.s3.amazonaws.com/webstack/thumbnail.jpg">Sorry, your browser doesn't support HTML5 video</video>
             </section>
             <!-- Audio -->
             <section>
                 <header>
                     <h2>Audio</h2>
                 </header>
-                <audio controls>
-                    <source src="https://intranet-projects-files.s3.amazonaws.com/webstack/TroubleChapter8_64kb.mp3" type="audio/mpeg">
-                    Sorry, your browser doesn't support audio element.
-                </audio>
+                <audio src="https://intranet-projects-files.s3.amazonaws.com/webstack/TroubleChapter8_64kb.mp3" controls>Sorry, your browser doesn't support audio element</audio>
             </section>
             <!-- Iframe -->
             <section>
